[tool.poetry]
name = "jsonschema-prompt"
version = "0.1.0"
description = "Construct JSON from user input according to a schema"
authors = ["Ben Kehoe"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.6.1"
jsonschema = "^3.2.0"
prompt_toolkit = "^3.0.5"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
